# spaceflightnewsapi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  .strapi-updater.json  .travis.yml  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  SECURITY.md  app.js  captain-definition  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yml  ecosystem.config.js  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  renovate.json  renovate.json5  routes.js  schemas.d.ts  server.js  sonar-project.properties
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  cleanup.yml  codacy.yml  codeql-analysis.yml  codspeed.yml  development.yml  get_acces_token  main.yml  nodejs.yml  pre-commit.yml  production.yml  renovate.yaml  semantic-release.yaml  sonar.yml  staging.yml  tests.yml  update_readme.yml
.run/: Template Django Server.run.xml  Template Docker.run.xml  Template Python tests.run.xml  pytest.run.xml
api/: admin.py  filters.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_article_options_alter_blog_options.py  0004_alter_article_updated_at_alter_blog_updated_at_and_more.py
api/models/: __init__.py  article.py  blog.py  event.py  launch.py  new_site.py  news_site.py  provider.py  report.py
api/serializers/: __init__.py  article_serializer.py  blog_serializer.py  event_serializer.py  info_serializer.py  launch_serializer.py  news_site_serializer.py  report_serializer.py  utils.py
api/tasks/: __init__.py  events.py  launch_library.py  launches.py  ll2.py  snapi.py
api/tests/: __init__.py  article_blog_endpoint_tests.py  article_endpoint_tests.py  conftest.py  info_endpoint_tests.py  report_endpoint_tests.py  test_articles_endpoint.py  test_info_endpoint.py  test_reports_endpoint.py
api/types/: __init__.py  events.py  launches.py  snapi.py
api/views/: __init__.py  articles.py  blogs.py  filters.py  info.py  reports.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  firebase.js  index.js
config/: admin.js  admin.ts  api.ts  database.js  database.ts  default.json  dev.json  middleware.js  nginx.conf.erb  plugins.js  server.js  swaggerOptions.js  test.json
config/functions/: bootstrap.js  cron.js
config/sync/: admin-role.strapi-author.json  admin-role.strapi-editor.json  admin-role.strapi-super-admin.json  core-store.core_admin_auth.json  core-store.plugin_content_manager_configuration_content_types##admin##api-token-permission.json  core-store.plugin_content_manager_configuration_content_types##admin##api-token.json  core-store.plugin_content_manager_configuration_content_types##admin##permission.json  core-store.plugin_content_manager_configuration_content_types##admin##role.json  core-store.plugin_content_manager_configuration_content_types##admin##user.json  core-store.plugin_content_manager_configuration_content_types##api##article.article.json  core-store.plugin_content_manager_configuration_content_types##api##blog.blog.json  core-store.plugin_content_manager_configuration_content_types##api##event.event.json  core-store.plugin_content_manager_configuration_content_types##api##launch.launch.json  core-store.plugin_content_manager_configuration_content_types##api##news-site.news-site.json  core-store.plugin_content_manager_configuration_content_types##api##report.report.json  core-store.plugin_content_manager_configuration_content_types##plugin##i18n.locale.json  core-store.plugin_content_manager_configuration_content_types##plugin##upload.file.json  core-store.plugin_content_manager_configuration_content_types##plugin##upload.folder.json  core-store.plugin_content_manager_configuration_content_types##plugin##users-permissions.permission.json  core-store.plugin_content_manager_configuration_content_types##plugin##users-permissions.role.json  core-store.plugin_content_manager_configuration_content_types##plugin##users-permissions.user.json  core-store.strapi_content_types_schema.json  user-role.public.json
consumer/: apps.py  mq_consumer.py
controllers/: articles.controller.js  articles.js  astronauts.js  blogs.controller.js  blogs.js  errors.js  info.controller.js  info.js  iss.js  mannedFlights.js  middleware.js  reports.controller.js  tasks.js  users.controller.js
docs/: api_data.js  api_data.json  api_project.js  api_project.json
helpers/: authHelpers.js  checkAdmin.js  jwtVerify.js  passportConfig.js
importers/: main.js  nasaspaceflight.js
models/: article.js  article.model.js  astronaut.js  blog.js  blog.model.js  iss.js  mannedFlight.js  mannedFlights.js  report.js  report.model.js  user.model.js
public/: 0a45c249.155399cc.js  0a45c249.3a111146.js  0a45c249.8fcc91a7.js  0a45c249.986c5144.js  0a45c249.b4768ba6.js  0a45c249.b7d61a83.js  0a45c249.de7f4917.js  0a45c249.eb1df89d.js  15.e2e43837.js  15.e4684e3f.js  15.eba6ad5f.js  16.415784ab.js  16.511f49d0.js  16.9b005907.js  17896441.2e77eb01.js  17896441.7b576bb6.js  17896441.b2fe9a5d.js  17896441.d6db7756.js  17896441.e1d3a655.js  17896441.fd550ae0.js  1be78505.227aae57.js  1be78505.2610f98a.js  1be78505.4a762ed1.js  1be78505.694ca3d2.js  1be78505.b544343e.js  1be78505.ee2c1b62.js  20ac7829.997cee02.js  23374ca6.2192ca40.js  23374ca6.21cc32ff.js  23374ca6.27a33a74.js  23374ca6.36189fca.js  23374ca6.4c3772e0.js  23374ca6.75a6efef.js  23374ca6.7987052b.js  32e798eb.3be28d4e.js  32e798eb.c796f1a5.js  404.html  5fc994c2.00b20e2d.js  5fc994c2.11501f47.js  5fc994c2.1a60d70f.js  (+80 more)
routes/: _apidoc.js  admin-bro.router.js  articles.router.js  blogs.router.js  index.js  info.router.js  reports.router.js  users.router.js
scripts/: deploy  deploy_test  entrypoint.sh  test  tests
snapy/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/: gunicorn.config.py  index.ts  manage.py
staticfiles/: README.md
test/: articles.js  articles.test.js  articles_test.js  astronauts.js  basic_test.js  blogs.test.js  errors.js  iss.js  mannedFlights.js  reports.test.js  tasks.js  test.js  users.test.js
(+281 files in other folders)
