[project]
name = "snapy"
version = "4"
description = "Spaceflight News API (SNAPI) enables developers to add the latest spaceflight news to their apps."
authors = [{ name = "Derk Weijers", email = "derk@weijers.xyz" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.23",
    "celery>=5.4.0",
    "django-celery-beat>=2.7.0",
    "django-celery-results>=2.5.1",
    "django-cors-headers>=4.4.0",
    "django-filter>=24.3",
    "django-health-check>=3.18.3",
    "django-jet-reboot>=1.3.9",
    "django-storages>=1.14.4",
    "django-stubs[compatible-mypy]>=4.2.7,<4.3",
    "django-stubs-ext==4.2.7",
    "django>=4.2.0,<4.3",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.27.2",
    "environs[django]>=11.0.0",
    "feedparser>=6.0.11",
    "gunicorn>=23.0.0",
    "httpx>=0.27.2",
    "markdown>=3.7",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0.2",
    "sentry-sdk>=2.14.0",
    "uritemplate>=4.1.1",
]

[tool.uv]
dev-dependencies = [
    "bandit[toml]>=1.7.9",
    "celery-stubs>=0.1.3",
    "coverage>=7.6.1",
    "django-filter-stubs>=0.1.3",
    "djangorestframework-stubs[compatible-mypy]>=3.14.0,<3.15.0",
    "mypy>=1.7.0,<1.8.0",
    "pika-stubs>=0.1.3",
    "pytest>=8.3.3",
    "pytest-codspeed>=2.2.1",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
    "pytest-env>=1.1.5",
    "pyupgrade>=3.17.0",
    "ruff>=0.6.6",
]

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "snapy.settings"

[tool.ruff]
extend-exclude = ["src/snapy/settings.py"]
line-length = 121

[tool.ruff.lint]
select = ["E", "W", "F", "I", "DJ", "UP"]

[tool.bandit]
exclude_dirs = ["tests/", ".github/", ".venv/"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "snapy.settings"
env = [
    "SECRET_KEY=dummy-secret-key",
    "DATABASE_URL=sqlite://:memory:",
    "SNAPI_VERSION=v1.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
